add material order featrue
