# docs/swagger.json
@@ -261,6 +261,149 @@
                 }
             }
         },
+        "/materialOrder": {
+            "get": {
+                "description": "Retrieves a list of material orders based on query parameters.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MaterialOrder"
+                ],
+                "summary": "Get material orders",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Material Order ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Seller ID",
+                        "name": "sellerId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Material Order status",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.MaterialOrder"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Inserts a new material order.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MaterialOrder"
+                ],
+                "summary": "Insert material order",
+                "parameters": [
+                    {
+                        "description": "Material Order information",
+                        "name": "materialOrder",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.InsertMaterialOrderParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.MaterialOrder"
+                        }
+                    }
+                }
+            }
+        },
+        "/materialOrder/{id}": {
+            "delete": {
+                "description": "Deletes a material order by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MaterialOrder"
+                ],
+                "summary": "Delete material order",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Material Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update an existing material order in the system.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MaterialOrder"
+                ],
+                "summary": "Update material order",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Material Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated material order details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.UpdateMaterialOrderParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
+                        }
+                    }
+                }
+            }
+        },
         "/order": {
             "get": {
                 "description": "Retrieves a list of orders based on query parameters.",
@@ -598,6 +741,12 @@
                         "type": "string",
                         "description": "Product ID",
                         "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Product SKU",
+                        "name": "sku",
                         "in": "query"
                     },
                     {
@@ -947,6 +1096,78 @@
                 }
             }
         },
+        "api.InsertMaterialOrderItemParams": {
+            "type": "object",
+            "properties": {
+                "material": {
+                    "$ref": "#/definitions/api.InsertMaterialOrderMaterialParams"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "totalPrice": {
+                    "type": "number"
+                }
+            }
+        },
+        "api.InsertMaterialOrderMaterialParams": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "remarks": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.InsertMaterialOrderParams": {
+            "type": "object",
+            "properties": {
+                "deliveryDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "materialOrderItems": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.InsertMaterialOrderItemParams"
+                    }
+                },
+                "orderDate": {
+                    "type": "string"
+                },
+                "paymentDate": {
+                    "type": "string"
+                },
+                "sellerID": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "totalAmount": {
+                    "type": "number"
+                }
+            }
+        },
         "api.InsertMaterialParams": {
             "type": "object",
             "properties": {
@@ -957,7 +1178,7 @@
                     "type": "string"
                 },
                 "quantity": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "remarks": {
                     "type": "string"
@@ -1016,6 +1237,9 @@
         "api.InsertOrderProductParams": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "sku": {
                     "type": "string"
                 },
@@ -1079,6 +1303,9 @@
                 },
                 "size": {
                     "type": "string"
+                },
+                "sku": {
+                    "type": "string"
                 }
             }
         },
@@ -1102,6 +1329,32 @@
                 }
             }
         },
+        "api.UpdateMaterialOrderParams": {
+            "type": "object",
+            "properties": {
+                "deliveryDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "orderDate": {
+                    "type": "string"
+                },
+                "paymentDate": {
+                    "type": "string"
+                },
+                "sellerID": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "totalAmount": {
+                    "type": "number"
+                }
+            }
+        },
         "api.UpdateMaterialParams": {
             "type": "object",
             "properties": {
@@ -1112,7 +1365,7 @@
                     "type": "string"
                 },
                 "quantity": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "remarks": {
                     "type": "string"
@@ -1171,6 +1424,9 @@
         "api.UpdateOrderProductParams": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "sku": {
                     "type": "string"
                 },
@@ -1234,6 +1490,9 @@
                 },
                 "size": {
                     "type": "string"
+                },
+                "sku": {
+                    "type": "string"
                 }
             }
         },
@@ -1284,8 +1543,83 @@
                 "name": {
                     "type": "string"
                 },
+                "price_history": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.PriceHistoryEntry"
+                    }
+                },
                 "quantity": {
+                    "type": "integer"
+                },
+                "remarks": {
                     "type": "string"
+                },
+                "size": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.MaterialOrder": {
+            "type": "object",
+            "properties": {
+                "deliveryDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "materialOrderItems": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.MaterialOrderItem"
+                    }
+                },
+                "orderDate": {
+                    "type": "string"
+                },
+                "paymentDate": {
+                    "type": "string"
+                },
+                "sellerId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "totalAmount": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.MaterialOrderItem": {
+            "type": "object",
+            "properties": {
+                "material": {
+                    "$ref": "#/definitions/types.MaterialOrderMaterial"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "totalPrice": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.MaterialOrderMaterial": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 },
                 "remarks": {
                     "type": "string"
@@ -1347,11 +1681,25 @@
         "types.OrderProduct": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "sku": {
                     "type": "string"
                 },
                 "unitPrice": {
                     "type": "number"
+                }
+            }
+        },
+        "types.PriceHistoryEntry": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -1415,6 +1763,9 @@
                     "type": "string"
                 },
                 "size": {
+                    "type": "string"
+                },
+                "sku": {
                     "type": "string"
                 }
             }
